option java_package = "com.googlecode.protobuf.netty.example";
option java_outer_classname = "Calculator";
option java_generic_services = true;

message CalcRequest {
    required int32 op1 = 1;
    required int32 op2 = 2;
}

message CalcResponse {
    required int32 result = 1;
}

service CalcService {
    rpc Add(CalcRequest) returns (CalcResponse);
    rpc Subtract(CalcRequest) returns (CalcResponse);
    rpc Multiply(CalcRequest) returns (CalcResponse);
    rpc Divide(CalcRequest) returns (CalcResponse);
}
